--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,3 +15,6 @@ python-dotenv==1.0.1
 aiofiles==23.2.1
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
+torch>=2.0.0
+transformers>=4.30.0
+pillow>=9.5.0
